# emCore

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  compile_flags.txt  library.json
cmake/: GenerateTasks.cmake  emCoreConfig.cmake.in
config/: README.md  default_tasks.yaml
examples/: task_example.cpp
scripts/: generate_command_table.py  generate_packet_config.py  generate_tasks.py  platformio_build.py
src/: emCore_dummy.cpp
src/emCore/: emCore.hpp  runtime.cpp  runtime.hpp
src/emCore/core/: config.hpp  etl_compat.hpp  strong_types.hpp  types.hpp
src/emCore/diagnostics/: health_monitor.hpp  profiler.hpp
src/emCore/error/: error_handler.hpp  result.hpp
src/emCore/event/: dispatcher.hpp  event.hpp  event_bus.hpp  event_runtime.hpp  event_types.hpp  events_global.hpp  ievent.hpp
src/emCore/memory/: arena_allocator.hpp  budget.hpp  layout.hpp  pool.hpp
src/emCore/messaging/: broker_global.hpp  distributed_state.hpp  event_log.hpp  message_broker.hpp  message_queue.hpp  message_types.hpp  qos_pubsub.hpp  rtos_message_queue.hpp  zero_copy.hpp
src/emCore/os/: memory.hpp  sync.hpp  tasks.hpp  time.hpp
src/emCore/platform/: impl_arduino.hpp  impl_esp32.hpp  impl_generic.hpp  impl_posix.hpp  impl_stm32.hpp  platform.hpp  platform_base.hpp
src/emCore/protocol/: byte_ring.hpp  command_dispatcher.hpp  decoder.hpp  encoder.hpp  fletcher16.hpp  packet_parser.hpp  packet_pipeline.hpp  packet_runtime.hpp  protocol_global.hpp
src/emCore/task/: rtos_scheduler.hpp  task_config.hpp  taskmaster.hpp  watchdog.hpp
src/emCore/utils/: helpers.hpp
templates/: task_config.htf
